@@ -2,13 +2,12 @@ package com.example.travel_platform.mypage;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.example.travel_platform._core.handler.ex.Exception400;
-import com.example.travel_platform._core.handler.ex.Exception404;
+import com.example.travel_platform.booking.BookingService;
 import com.example.travel_platform.user.User;
 import com.example.travel_platform.user.UserQueryRepository;
 
@@ -22,9 +21,9 @@ public class MypageService {
     private static final int UPCOMING_BOOKING_LIMIT = 2;
     private static final int UPCOMING_TRIP_PLAN_LIMIT = 2;
 
+    private final BookingService bookingService;
     private final UserQueryRepository userQueryRepository;
-    private final MypageBookingQueryRepository mypageBookingQueryRepository;
-    private final MypageTripPlanQueryRepository mypageTripPlanQueryRepository;
+    private final MypageQueryRepository mypageQueryRepository;
 
     public MypageResponse.MainPageDTO getMainPage(Integer sessionUserId) {
         User user = findUser(sessionUserId);
@@ -33,10 +32,25 @@ public class MypageService {
         return createMainPage(user, bookings, tripPlans);
     }
 
-    public MypageResponse.BookingDetailPlaceholderPageDTO getBookingDetailPage(Integer sessionUserId, Integer bookingId) {
+    public MypageResponse.BookingListViewDTO getBookingListView(Integer sessionUserId, String categoryCode) {
         findUser(sessionUserId);
-        requireOwnedBooking(sessionUserId, bookingId);
-        return MypageResponse.BookingDetailPlaceholderPageDTO.createBookingDetailPlaceholderPage(bookingId);
+
+        LocalDate today = LocalDate.now();
+        BookingCategory selectedCategory = BookingCategory.fromCode(categoryCode);
+        List<MypageResponse.BookingListCardDTO> items = bookingService.getBookingList(sessionUserId).stream()
+                .filter(booking -> selectedCategory.matches(booking, today))
+                .map(booking -> MypageResponse.BookingListCardDTO.fromBookingSummary(booking, today))
+                .toList();
+
+        return MypageResponse.BookingListViewDTO.createBookingListView(
+                MypageResponse.BookingListPageDTO.createBookingListPage(selectedCategory, !items.isEmpty()),
+                items);
+    }
+
+    public MypageResponse.BookingDetailPageDTO getBookingDetailPage(Integer sessionUserId, Integer bookingId) {
+        findUser(sessionUserId);
+        return MypageResponse.BookingDetailPageDTO.fromBookingDetail(
+                bookingService.getBookingDetail(sessionUserId, bookingId));
     }
 
     @Transactional
@@ -54,21 +68,21 @@ public class MypageService {
     }
 
     private List<MypageResponse.BookingSummaryCardDTO> loadUpcomingBookings(Integer sessionUserId) {
-        return mypageBookingQueryRepository.findUpcomingBookingSummaryRows(
+        return mypageQueryRepository.findUpcomingBookingRows(
                 sessionUserId,
                 LocalDate.now(),
                 UPCOMING_BOOKING_LIMIT).stream()
                 .map(this::createBookingSummaryCard)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<MypageResponse.TripPlanSummaryCardDTO> loadUpcomingTripPlans(Integer sessionUserId) {
-        return mypageTripPlanQueryRepository.findUpcomingTripPlanSummaryRows(
+        return mypageQueryRepository.findUpcomingTripPlanRows(
                 sessionUserId,
                 LocalDate.now().minusDays(1),
                 UPCOMING_TRIP_PLAN_LIMIT).stream()
                 .map(this::createTripPlanSummaryCard)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private MypageResponse.MainPageDTO createMainPage(
@@ -81,7 +95,7 @@ public class MypageService {
                 MypageResponse.TripPlanSummarySectionDTO.createTripPlanSection(tripPlans));
     }
 
-    private MypageResponse.BookingSummaryCardDTO createBookingSummaryCard(MypageBookingSummaryRow row) {
+    private MypageResponse.BookingSummaryCardDTO createBookingSummaryCard(BookingSummaryRow row) {
         return MypageResponse.BookingSummaryCardDTO.createBookingSummaryCard(
                 row.bookingId(),
                 row.lodgingName(),
@@ -89,7 +103,7 @@ public class MypageService {
                 row.checkOut());
     }
 
-    private MypageResponse.TripPlanSummaryCardDTO createTripPlanSummaryCard(MypageTripPlanSummaryRow row) {
+    private MypageResponse.TripPlanSummaryCardDTO createTripPlanSummaryCard(TripPlanSummaryRow row) {
         return MypageResponse.TripPlanSummaryCardDTO.createTripPlanSummaryCard(
                 row.planId(),
                 row.title(),
@@ -97,27 +111,21 @@ public class MypageService {
                 row.endDate());
     }
 
-    private void requireOwnedBooking(Integer sessionUserId, Integer bookingId) {
-        if (!mypageBookingQueryRepository.existsOwnedBooking(sessionUserId, bookingId)) {
-            throw new Exception404("예약 정보를 찾을 수 없습니다.");
-        }
-    }
-
     private void validateCurrentPassword(User user, String currentPassword) {
         if (!normalize(user.getPassword()).equals(currentPassword)) {
-            throw new Exception400("?꾩옱 鍮꾨?踰덊샇媛 ?쇱튂?섏? ?딆뒿?덈떎.");
+            throw new Exception400("현재 비밀번호가 일치하지 않습니다.");
         }
     }
 
     private void validateNewPasswordConfirm(String newPassword, String newPasswordConfirm) {
         if (!newPassword.equals(newPasswordConfirm)) {
-            throw new Exception400("??鍮꾨?踰덊샇? ?뺤씤媛믪씠 ?쇱튂?섏? ?딆뒿?덈떎.");
+            throw new Exception400("새 비밀번호와 확인값이 일치하지 않습니다.");
         }
     }
 
     private User findUser(Integer sessionUserId) {
         return userQueryRepository.findUser(sessionUserId)
-                .orElseThrow(() -> new Exception400("?ъ슜???뺣낫瑜?李얠쓣 ???놁뒿?덈떎."));
+                .orElseThrow(() -> new Exception400("사용자 정보를 찾을 수 없습니다."));
     }
 
     private String normalize(String value) {
